[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameFrontHUDRelated/Subs/HealthPanel/Assets/HealthPanel_Heart_Alive.png" type="Texture" id=1]
[ext_resource path="res://GameFrontHUDRelated/Subs/HealthPanel/Assets/HealthPanel_FillForeground.png" type="Texture" id=2]
[ext_resource path="res://GameFrontHUDRelated/Subs/HealthPanel/Assets/HealthPanel_MainBodyBackground.png" type="Texture" id=3]
[ext_resource path="res://GameFrontHUDRelated/Subs/HealthPanel/HealthPanel.gd" type="Script" id=4]

[node name="HealthPanel" type="MarginContainer"]
margin_right = 230.0
margin_bottom = 29.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 230.0
margin_bottom = 29.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 230.0
margin_bottom = 29.0
mouse_filter = 2

[node name="HealthTextureProgress" type="TextureProgress" parent="Control"]
margin_left = 15.0
margin_top = 2.0
margin_right = 215.0
margin_bottom = 27.0
mouse_filter = 2
step = 0.05
texture_progress = ExtResource( 2 )

[node name="HealthIcon" type="TextureRect" parent="Control"]
margin_left = 194.0
margin_top = 7.0
margin_right = 210.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="HealthSeparatorContainer" type="Control" parent="Control"]
margin_right = 64.0
margin_bottom = 30.0
mouse_filter = 2
